--- a/elasticBeanstalk.yml
+++ b/elasticBeanstalk.yml
@@ -41,9 +41,9 @@ Resources:
       EnvironmentName: moviesEnv
       SolutionStackName: "64bit Amazon Linux 2 v4.2.18 running Tomcat 8.5 Corretto 11"
       OptionSettings:
-          # - Namespace: aws:elasticbeanstalk:environment
-          #   OptionName: EnvironmentType
-          #   Value: SingleInstance
+          - Namespace: aws:elasticbeanstalk:environment
+            OptionName: EnvironmentType
+            Value: LoadBalanced
           - Namespace: aws:autoscaling:launchconfiguration
             OptionName: IamInstanceProfile
             Value: aws-elasticbeanstalk-ec2-role
