--- a/elasticBeanstalk.yml
+++ b/elasticBeanstalk.yml
@@ -4,18 +4,18 @@ Resources:
   myS3Bucket:
     Type: "AWS::S3::Bucket"
     Properties:
-      BucketName: "moviesproject"
+      BucketName: "moviesprojects3"
  
-  moviesApp:
+  moviesAppv1:
     Type: AWS::ElasticBeanstalk::Application
     Properties:
-      ApplicationName: "moviesApp"
+      ApplicationName: "moviesAppv1"
 
   # myAppVersion:
   #   Type: AWS::ElasticBeanstalk::ApplicationVersion
   #   Properties:
   #     ApplicationName:
-  #       Ref: "moviesApp"
+  #       Ref: "moviesAppv1"
   #     SourceBundle:
   #       S3Bucket:
   #         Fn::Join:
@@ -30,15 +30,15 @@ Resources:
     Type: AWS::ElasticBeanstalk::ConfigurationTemplate
     Properties:
       ApplicationName:
-        Ref: "moviesApp"
+        Ref: "moviesAppv1"
       SolutionStackName: "64bit Amazon Linux 2 v4.2.18 running Tomcat 8.5 Corretto 11"
 
   enviromant:
     Type: AWS::ElasticBeanstalk::Environment
     Properties:
       ApplicationName:
-        Ref: "moviesApp"
-      EnvironmentName: moviesEnv
+        Ref: "moviesAppv1"
+      EnvironmentName: "moviesEnvi"
       SolutionStackName: "64bit Amazon Linux 2 v4.2.18 running Tomcat 8.5 Corretto 11"
       OptionSettings:
           - Namespace: aws:elasticbeanstalk:environment
