--- a/elasticBeanstalk.yml
+++ b/elasticBeanstalk.yml
@@ -4,12 +4,12 @@ Resources:
   myS3Bucket:
     Type: "AWS::S3::Bucket"
     Properties:
-      BucketName: "moviesprojects3"
+      BucketName: "moviesprojects-3"
  
   moviesAppv1:
     Type: AWS::ElasticBeanstalk::Application
     Properties:
-      ApplicationName: "moviesAppv1"
+      ApplicationName: "moviesAppv-1"
 
   # myAppVersion:
   #   Type: AWS::ElasticBeanstalk::ApplicationVersion
@@ -30,15 +30,15 @@ Resources:
     Type: AWS::ElasticBeanstalk::ConfigurationTemplate
     Properties:
       ApplicationName:
-        Ref: "moviesAppv1"
+        Ref: "moviesAppv-1"
       SolutionStackName: "64bit Amazon Linux 2 v4.2.18 running Tomcat 8.5 Corretto 11"
 
   enviromant:
     Type: AWS::ElasticBeanstalk::Environment
     Properties:
       ApplicationName:
-        Ref: "moviesAppv1"
-      EnvironmentName: "moviesEnvi"
+        Ref: "moviesAppv-1"
+      EnvironmentName: "moviesEnvi-1"
       SolutionStackName: "64bit Amazon Linux 2 v4.2.18 running Tomcat 8.5 Corretto 11"
       OptionSettings:
           - Namespace: aws:elasticbeanstalk:environment
